# swift-pico-w-hello

./: .gitignore  BridgingHeader.h  CMakeLists.txt  CMakeLists_0.txt  CMakeLists_1.txt  CMakeLists_2.txt  Main.swift  README.md  build.sh  helper.c  helper.h  test.c
01-OnboardLED/: README.md  build.sh
02-Switch/: build.sh
03-USB-Serial/: BridgingHeader.h  CMakeLists.txt
04-IncludeLocalCLib/: README.md
04-IncludeLocalCLib/CPicoHelpers/: helper.c  module.modulemap
05-IncludeCFile/: BridgingHeader.h  Main.swift  build.sh  helper.c  helper.h
06-i2c-proof-of-concept/: Main.swift  build.sh
07-touchwheel-SAO/: CMakeLists.txt  Main.swift
07-touchwheel-SAO-blinkstatus/: Main.swift
07-touchwheel-SAO-blinkstatus/HAL/: LEDs.swift  LanguageSupport.swift
07-touchwheel-SAO-blinkstatus/SDK_Bridge/: helper.h
07-touchwheel-SAO/HAL/: Button.swift  I2C.swift  STDIO.swift  WiFi.swift
07-touchwheel-SAO/SDK_Bridge/: helper.h
08-StrippedDownBlink/: BridgingHeader.h  CMakeLists.txt  Main.swift  blink.c  blink.h  build.sh
CPicoHelpers/: helper.c  helper.h
XX-BadgeFirmware/: Main.swift  PinwheelSAO.swift  TouchwheelSAO.swift  build.sh
XX-BadgeFirmware/HAL/: I2C.swift  LEDs.swift  STDIO.swift
XX-BadgeFirmware/SDK_Bridge/: helper.c  helper.h
